<resources>
    <string name="app_name">TaskCan</string>
    <string name="title_activity_testlogin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navig">navig</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_home">Search Home</string>
    <string name="navigation_drawer_my_tasks">My Tasks</string>
    <string name="navigation_drawer_my_bids">My Bids</string>
    <string name="navigation_drawer_my_profile">My Profile</string>
    <string name="navigation_drawer_sync">Synchronize</string>
    <string name="navigation_drawer_sign_out">Sign Out</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_username">Email</string>
    <string name="title_activity_password">Password</string>

    <string name="sign_up_activity_name">Name *</string>
    <string name="sign_up_activity_username">Username *</string>
    <string name="sign_up_activity_email">Email *</string>
    <string name="sign_up_activity_password">Password *</string>
    <string name="sign_up_activity_phone">Phone Number *</string>
    <string name="sign_up_activity_register">Register</string>

    <string name="search_activity_search_hint">Search For Tasks</string>
    <string name="search_activity_search_button">Search</string>
    <string name="search_activity_browse_categories">Browse Categories</string>
    <string name="search_activity_map">Map</string>

    <string name="my_task_activity_new_task">New Task</string>
    <string name="my_task_activity_requested">Requested</string>
    <string name="my_task_activity_assigned">Assigned</string>
    <string name="my_task_activity_archived">Archived</string>
    <string name="my_task_activity_task">Task</string>
    <string name="my_task_activity_current_bid">Current Bid</string>

    <string name="my_bid_activity_pending">Pending</string>
    <string name="my_bid_activity_assigned">Assigned</string>

    <string name="view_profile_edit_profile_button">Edit Profile</string>
    <string name="view_profile_name">Name:</string>
    <string name="view_profile_username">Username:</string>
    <string name="view_profile_email">Email:</string>
    <string name="view_profile_phone">Phone Number:</string>

    <string name="view_category_name_descr">Categories</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_task_map">Tasks Near Me</string>

    <string name="edit_profile_activity_save_button">Save</string>
    <string name="add_task_activity_location_button">Add Location</string>
    <string name="add_task_activity_max_bid">($)</string>
    <string name="view_edit_images_button">View/Edit Images</string>

    <string name="view_task_activity_bid_field">($) My Bid</string>
    <string name="view_task_activity_bid_button">Confirm Bid</string>

    <string name="view_task_on_map_radius">Search Radius (km):</string>
    <string name="view_task_on_map_radius_default">5.00</string>
    <string name="view_task_on_map_refresh_button">Refresh</string>

    <string name="my_bids_lowest_bid">Lowest Bid</string>
    <string name="my_bids_my_bid">My Bid</string>

    <string-array name="categories_array">
        <item>Home Maintenance</item>
        <item>Delivery Services</item>
        <item>Pet Care</item>
        <item>Entertainment</item>
        <item>Personal Assistance</item>
        <item>Landscaping</item>
        <item>Automotive Services</item>
        <item>Culinary Services</item>
        <item>Tutoring</item>
        <item>Other</item>
    </string-array>

    <string-array name="task_status_spinner_array">
        <item>Requested</item>
        <item>Assigned</item>
        <item>Done</item>
    </string-array>
    <string name="view_bids_bids">Bids</string>
    <string name="view_bids_action">Action</string>
    <string name="view_bids_accept_button">Accept</string>
    <string name="view_bids_decline_button">Decline</string>


</resources>
