<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edmonton_background">
    tools:context="com.example.n8tech.taskcan.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/gradient_no_rounding"
        android:elevation="4dp"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/search_activity_search_field"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/entry_field"
        android:ems="10"
        android:hint="@string/search_activity_search_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_toolbar" />

    <Button
        android:id="@+id/search_activity_search_button"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:text="@string/search_activity_search_button"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_activity_search_field" />

    <Button
        android:id="@+id/search_activity_browse_button"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:text="@string/search_activity_browse_categories"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_activity_search_button" />

    <Button
        android:id="@+id/search_activity_map_button"
        android:layout_width="350dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient"
        android:text="@string/search_activity_map"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_activity_browse_button" />


</android.support.constraint.ConstraintLayout>
